# MCU_learn_51

LED01/: CMakeLists.txt  platformio.ini
LED01/lib/: lcd1602.c  lcd1602.h
LED01/src/: KEY.h  LCD1602.h  LED.h  NUMs.h  main.c
